--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@darthtrevino/react-d3-axis",
+  "name": "react-d3-axis",
   "version": "0.1.2",
   "description": "React-based Axis component for D3",
   "main": "lib/react-d3-axis.js",
